--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Joanne <br>Chen</h1>
-        <img src="img/Joanne.png" alt="Joanne Chen">
+        <h1 class="mt-6 mb-1">Joanne <br>Chen</h1>
+        <img src="img/Joanne.png" alt="Joanne Chen" class="photo mt-8 mb-6">
     </div>
     
-    <div class="container">
-        <h2>個人資料<span>profile</span></h2>
+    <div class="container mb-9">
+        <h2>個人資料<span class="ml-2">profile</span></h2>
         <p>陳久安 Joanne Chen<br>
         1997-<br>
         應屆畢業生 / 接案設計師 / UI 設計實習生</p>
@@ -25,30 +25,33 @@
         </p>
     </div>
 
-    <div class="container">
-        <h2>學歷<span>education</span></h2>
+    <div class="container mb-9">
+        <h2>學歷<span class="ml-2">education</span></h2>
         <p>國立六角師範大學 視覺設計學系 學士學位｜2016-2020</p>
         <p>國立六腳高級中學 美術班｜2013-2016</p> 
     </div>
 
     <div class="dark-bg">
-        <div class="small-container">
+        <div class="small-container pt-3 pb-4_5">
             <h2>技能<span>skills</span></h2>
-            <div class="middle">
-                <p>Adobe Photoshop </p>
-                <p>Adobe Illustrator </p>
-                <p>Adobe XD </p>
-                <p>Adobe Indesign </p>
-                <p>C4D </p>
-                <p>Adobe Premiere </p>
-                <p>語言：中文、英文</p>
+            <div class="skill">
+                <div class="middle">
+                    <p>Adobe Photoshop </p>
+                    <p>Adobe Illustrator </p>
+                    <p>Adobe XD </p>
+                    <p>Adobe Indesign </p>
+                    <p>C4D </p>
+                    <p>Adobe Premiere </p>
+                    <p>語言：中文、英文</p>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="container">
-        <h2>工作經驗<span>work experience</span></h2>
+    <div class="container pt-9 mb-9">
+        <h2>工作經驗<span class="ml-2">work experience</span></h2>
         <ul>
-            <li><p>>六角學院 視覺設計實習生｜2019/07-2020/06</p>
+            <li><p>六角學院 視覺設計實習生｜2019/07-2020/06</p>
                 <img src="img/hexschool.png" alt="hexschool">
                 <p>在六角學院長達一年的實習中，前期藉由公司課程掌握 HTML, CSS, Adobe XD，設計給學員使用的名片設計教材，並參與六角週年活動。設計各式周邊商品及活動網站宣傳圖。後期進入 UI 設計範疇，設計六角共筆部落格。W3HexSchool、六角發案服務網介面設計、供給學員的教案、RWD官方網站設計，並設計各式網頁活動宣傳圖。</p>
             </li>
@@ -63,17 +66,17 @@
     </div>
 
     <div class="dark-bg">
-        <div class="container">
-            <h2>聯絡方式<span>contact method</span></h2>
+        <div class="container pt-3 pb-4_5">
+            <h2>聯絡方式<span class="ml-2">contact method</span></h2>
             <ul class="contact">
                 <li><a href="mailto:xxxd@hexschool.com">xxxd@hexschool.com</a></li> 
                 <li><a href="tel:+8860910123456">0910123456</a></li>
                 <li>Kaohsiung, Taiwan</li>
-                <li>作品連結：</li><a href="http://www.behance.net/xxxdddddd">https://www.behance.net/xxxdddddd</a>
-                <li class="sns"> 
-                    <a href="#"><img src="img/facebook.png" alt="facebook" class="sns-icon"></a>
-                    <a href="#"><img src="img/instagram.png" alt="instagram" class="sns-icon"></a>
-                    <a href="#"><img src="img/line.png" alt="line" class="sns-icon"></a>
+                <li>作品連結：<a href="http://www.behance.net/xxxdddddd">https://www.behance.net/xxxdddddd</a></li>
+                <li> 
+                    <a href="#"><img src="img/facebook.png" alt="facebook" class="ml-2"></a>
+                    <a href="#"><img src="img/instagram.png" alt="instagram" class="ml-2"></a>
+                    <a href="#"><img src="img/line.png" alt="line" class="ml-2"></a>
                 </li>
             </ul>
         </div>
